--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "dev": "node main.js"
+    "dev": "node --env-file .env main.js",
+    "devw": "node --watch --env-file .env main.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.5",
     "mongodb": "^6.8.0"
   }
 }
