--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "dev": "node --env-file .env main.js",
-    "devw": "node --watch --env-file .env main.js"
+    "dev": "node --env-file .env main.js"
   },
   "keywords": [],
   "author": "",
